Lots of Document cleanup.

--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -7,12 +7,14 @@
 			<tmpl-documents-browser
 				class="anchor-section"
 				id="anchor-documents"
+				x-approvals="false"
 				x-project="project">
 			</tmpl-documents-browser>
 
 			<tmpl-documents-approvals
 				class="anchor-section"
 				id="anchor-document-approvals"
+				x-approvals="true"
 				x-project="project">
 			</tmpl-documents-approvals>
 
