--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -59,6 +59,7 @@
 		class="anchor-section"
 		id="anchor-documents"
 		x-project="project"
+		x-approvals="false"
 		ng-if="('project'| shouldDisplayPanel:'documents':project.status) && environment === 'MEM'">
 	</tmpl-documents-browser>
 
