--- a/modules/recent-activity/client/views/recent-activity.html
+++ b/modules/recent-activity/client/views/recent-activity.html
@@ -13,6 +13,7 @@
 </section>
 <section class="panel panel-default" ng-show="!recentActs || recentActs.length === 0">
 	<div class='panel-body'>
-		<h3 class="no-lower-margin">No Recent Activity</h3>
+		<h3 class="no-lower-margin">News and Notices</h3>
+		<p>Please check back here for recent activity notices.</p>
 	</div>
 </section>
