--- a/modules/projects/client/views/projects-partials/projects-schedule.html
+++ b/modules/projects/client/views/projects-partials/projects-schedule.html
@@ -1,4 +1,4 @@
-<section class='panel panel-default'>
+<section class='panel panel-default' id="anchor-schedule">
 	<div class="block-content">
 		<h3>Relative Schedule</h3>
 	</div>
